vitest and happy dom setup for the unit testing and also come changes in the previous code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,9 @@
 {
-  // https://nuxt.com/docs/guide/concepts/typescript
+
+"compilerOptions": {
+  "types":["vitest/globals"]
+}, 
+
   "files": [],
   "references": [
     {
