covered module 10 and tested functions and composables

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,15 @@
 {
 
-"compilerOptions": {
-  "types":["vitest/globals"]
-}, 
+  "extends": "./.nuxt/tsconfig.json",
+  "compilerOptions": {
+    "baseUrl": ".",
+      "types":["vitest/globals","node"]
+,
+    "paths": {
+      "@/*": ["./*"],
+      "~/*": ["./*"]
+    }
+  },
 
   "files": [],
   "references": [
@@ -20,3 +27,4 @@
     }
   ]
 }
+
