--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage"
-},
+  },
   "dependencies": {
     "nuxt": "^4.3.1",
     "vue": "^3.5.28",
@@ -20,10 +20,13 @@
   "devDependencies": {
     "@nuxt/test-utils": "^4.0.0",
     "@types/jest": "^30.0.0",
+    "@types/mocha": "^10.0.10",
     "@vitejs/plugin-vue": "^6.0.4",
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^20.6.3",
+    "i": "^0.3.7",
     "jsdom": "^28.1.0",
+    "npm": "^11.10.0",
     "vitest": "^4.0.18"
   }
 }
